NMVL connected, worked, PowerLimit working without Xorg. Now other methods works only with Xorg (maybe TempLimit nope). Some problem with setFanSpeed method